# chip8rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
assets/: crt_vert.glsl
src/: constants.rs  emulator.rs  lib.rs  main.rs  mem.rs  process.rs
tests/: compare.rs
