[package]
name = "chip8rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chip8rs_client"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
image = "0.25.5"
image-compare = "0.4.1"
macroquad = { version = "0.4.13", features = ["audio"] }
rand = "0.8.5"
thiserror = "2.0.7"
